fix: change table prefix mogo_ -> cv_ and auto rename when upgrading

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "mogo",
+  "projectName": "clickvisual",
   "projectOwner": "shimohq",
   "repoType": "github",
   "repoHost": "https://github.com",
