--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ data/all-in-one/zookeeper/data/
 data/all-in-one/zookeeper/datalog/
 
 rules/*
-/data/helm/mogo/default.toml
-/data/helm/mogo/resource.yaml
+/data/helm/clickvisual/default.toml
+/data/helm/clickvisual/resource.yaml
 
 /data/k8s/fluent-bit/
