--- a/data/k8s/prometheus/alertmanager-service.yaml
+++ b/data/k8s/prometheus/alertmanager-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager
-  namespace: mogo
+  namespace: clickvisual
   labels:
     name: "alertmanager"
 spec:
