--- a/data/k8s/prometheus/prom2click-service.yaml
+++ b/data/k8s/prometheus/prom2click-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prom2click
-  namespace: mogo
+  namespace: clickvisual
   labels:
     name: "prom2click"
 spec:
