--- a/data/k8s/prometheus/prometheus-configmap.yaml
+++ b/data/k8s/prometheus/prometheus-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: mogo
+  namespace: clickvisual
 data:
   prometheus.yaml: |
     global:
