--- a/data/k8s/prometheus/prometheus-deployment.yaml
+++ b/data/k8s/prometheus/prometheus-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: mogo
+  namespace: clickvisual
   labels:
     app: prometheus
 spec:
