--- a/data/k8s/prometheus/prometheus-rules.yaml
+++ b/data/k8s/prometheus/prometheus-rules.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-rules
-  namespace: mogo
+  namespace: clickvisual
 data:
   watchdog.yaml: |
     groups:
     - name: test-rule
       rules:
-      - alert: mogo_watchdog
+      - alert: clickvisual_watchdog
         expr: up{instance="localhost:9090", job="prometheus"} > 0
         for: 1m
         labels:
