--- a/data/k8s/prometheus/prometheus-service.yaml
+++ b/data/k8s/prometheus/prometheus-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus
-  namespace: mogo
+  namespace: clickvisual
   labels:
     name: "prometheus"
 spec:
