--- a/ui/package.json
+++ b/ui/package.json
@@ -55,6 +55,7 @@
     "@ant-design/pro-table": "^2.30.8",
     "@types/crypto-js": "^4.0.2",
     "@types/react-resizable": "^1.7.4",
+    "@types/styled-components": "^5.1.25",
     "@umijs/route-utils": "^1.0.36",
     "ahooks": "^3.0.5",
     "antd": "^4.14.0",
@@ -73,7 +74,7 @@
     "react-monaco-editor": "^0.46.0",
     "react-resizable": "^3.0.4",
     "styled-components": "^5.3.5",
-    "umi": "^3.5.0",
+    "umi": "3.5.24",
     "umi-serve": "^1.9.10"
   },
   "devDependencies": {
