--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
     "@ant-design/pro-form": "^1.18.3",
     "@ant-design/pro-layout": "^6.15.3",
     "@ant-design/pro-table": "^2.30.8",
+    "@mrblenny/react-flow-chart": "^0.0.14",
     "@types/crypto-js": "^4.0.2",
     "@types/react-resizable": "^1.7.4",
     "@types/styled-components": "^5.1.25",
@@ -73,6 +74,7 @@
     "react-infinite-scroll-component": "6.1.0",
     "react-monaco-editor": "^0.46.0",
     "react-resizable": "^3.0.4",
+    "sql-formatter": "^6.1.2",
     "styled-components": "^5.3.5",
     "umi": "3.5.24",
     "umi-serve": "^1.9.10"
