--- a/config/default.toml
+++ b/config/default.toml
@@ -33,7 +33,7 @@ name = "clickvisual.log"
 [mysql]
 debug = true
 # database DSN
-dsn = "root:root@tcp(localhost:3306)/clickvisual?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
+dsn = "root:root@tcp(127.0.0.1:13306)/clickvisual?charset=utf8mb4&collation=utf8mb4_general_ci&parseTime=True&loc=Local&readTimeout=1s&timeout=1s&writeTimeout=3s"
 # log level
 level = "debug"
 # maximum number of connections in the idle connection pool for database
