feat(data analysis): Added the real-time query function

--- a/ui/package.json
+++ b/ui/package.json
@@ -53,7 +53,6 @@
     "@ant-design/pro-form": "^1.18.3",
     "@ant-design/pro-layout": "^6.15.3",
     "@ant-design/pro-table": "^2.30.8",
-    "@mrblenny/react-flow-chart": "^0.0.14",
     "@types/crypto-js": "^4.0.2",
     "@types/react-resizable": "^1.7.4",
     "@types/styled-components": "^5.1.25",
@@ -71,6 +70,7 @@
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-floating-button": "^1.1.1",
+    "react-flow-renderer": "^10.3.6",
     "react-helmet-async": "^1.0.4",
     "react-infinite-scroll-component": "6.1.0",
     "react-monaco-editor": "^0.46.0",
