fix: service ports are consistent with deployment

--- a/data/helm/clickvisual/templates/service.yaml
+++ b/data/helm/clickvisual/templates/service.yaml
@@ -7,9 +7,13 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - name: server
+      port: { { .Values.service.port } }
       protocol: TCP
-      name: http
+      targetPort: server
+    - name: governor
+      port: 19011
+      protocol: TCP
+      targetPort: governor
   selector:
     {{- include "clickvisual.selectorLabels" . | nindent 4 }}
