--- a/ui/package.json
+++ b/ui/package.json
@@ -62,12 +62,14 @@
     "classnames": "^2.2.6",
     "crypto-js": "^4.1.1",
     "dagre": "^0.8.5",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.11",
     "moment": "^2.29.2",
     "monaco-editor": "^0.31.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "omit.js": "^2.0.2",
     "react": "^17.0.0",
+    "react-data-mapping": "^1.3.12",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
     "react-floating-button": "^1.1.1",
