fix: Update docker.toml default ch dsn
Signed-off-by: MEX7 <mex7.0828@gmail.com>

--- a/data/all-in-one/clickvisual/config/docker.toml
+++ b/data/all-in-one/clickvisual/config/docker.toml
@@ -83,4 +83,4 @@ teamIds = []
 allowedOrganizations = []
 
 [defaultCh]
-dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&writer_timeout=10&debug=true"
+dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&write_timeout=10&debug=true"
