fix: Update docker-compse default ch dsn
Signed-off-by: MEX7 <mex7.0828@gmail.com>

--- a/docker-compose.devops.m1.yml
+++ b/docker-compose.devops.m1.yml
@@ -146,7 +146,7 @@ services:
       - cv-devops-net
     image: fhalim/prom2click:latest
     command:
-      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=root&read_timeout=10&writer_timeout=10&debug=true'
+      - '-ch.dsn=tcp://clickhouse:9000?username=root&password=root&read_timeout=10&write_timeout=10&debug=true'
       - '-ch.db=metrics'
       - '-ch.table=samples'
     expose:
