--- a/config/default.toml
+++ b/config/default.toml
@@ -25,8 +25,11 @@ port = 19011
 
 [logger]
 # log level, avaliable level: "debug", "info", "warn", "error", "panic", "fatal"
-level = "debug"
+level = "info"
 name = "clickvisual.log"
+
+[logger.default]
+level = "info"
 
 # if isMultiCopy is true
 [redis]
