fix(ui): --openssl-legacy-provider #660

--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096 --openssl-legacy-provider\" umi build",
+    "build": "umi build NODE_OPTIONS=--max_old_space_size=4096",
+    "build-ssl": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096 --openssl-legacy-provider\" umi build",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start",
     "gh-pages": "gh-pages -d dist",
