--- a/ui/package.json
+++ b/ui/package.json
@@ -62,6 +62,7 @@
     "ahooks": "^3.0.5",
     "antd": "^4.14.0",
     "classnames": "^2.2.6",
+    "codemirror": "^5.59.1",
     "crypto-js": "^4.1.1",
     "d3": "^7.6.1",
     "dagre": "^0.8.5",
@@ -72,6 +73,7 @@
     "monaco-editor-webpack-plugin": "^7.0.1",
     "omit.js": "^2.0.2",
     "react": "^17.0.0",
+    "react-codemirror2": "^7.2.1",
     "react-data-mapping": "^1.3.12",
     "react-dev-inspector": "^1.1.1",
     "react-dom": "^17.0.0",
