--- a/config/resource.yaml
+++ b/config/resource.yaml
@@ -14,6 +14,8 @@ permission:
   - name: alarm
     path: /alarm
     children:
+      - name: environment
+        path: /alarm/environment
       - name: rules
         path: /alarm/rules
       - name: notifications
