feat(storage): Table dependence optimization

--- a/config/default.toml
+++ b/config/default.toml
@@ -105,7 +105,7 @@ allowedOrganizations = []
 [prom2click]
 enable = true
 
-[prom2click.dev]
+[[prom2click.cfgs]]
 host = "127.0.0.1"
 port = 9222
 clickhouseDSN = "tcp://127.0.0.1:9000"
