--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -26,3 +26,5 @@ jobs:
             Updates [swagger-ui]
           labels: dependencies, automated pr
           branch: swagger-ui-updates
+        env:
+         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
