--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -20,11 +20,10 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.RELEASE_TOKEN }}
           commit-message: Update swagger-ui
           title: Update SwaggerUI
           body: |
             Updates [swagger-ui]
           labels: dependencies, automated pr
-          branch: feature/docker-ci
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          branch: master
