--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -21,7 +21,7 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.RELEASE_TOKEN }}
-          commit-message: Update swagger-ui
+          commit-message: 'docs: swagger update'
           title: Update Swagger
           body: |
             Updates [swagger-ui]
