--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -14,7 +14,7 @@ jobs:
         id: swagger-ui
         run: |
           export PATH=$(go env GOPATH)/bin:$PATH
-          go install github.com/gotomicro/ego-gen-api/cmd/egen@latest
+          go get -u github.com/gotomicro/ego-gen-api/cmd/egen
           go env
           egen --config egen.yaml
       - name: Create Pull Request
