--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -10,20 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Swagger
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.0'
+      - name: Install Ego Gen API
         id: swagger-ui
         run: |
           export PATH=$(go env GOPATH)/bin:$PATH
           go env
           go version 
-          go install github.com/gotomicro/ego-gen-api/cmd/egen@latest
-          egen --config egen.yaml
-      - name: Create Pull Request
+          go install github.com/gotomicro/ego-gen-api/cmd/egogen@latest
+          egogen --config egogen.yaml
+      - name: Create Commit
         uses: peter-evans/create-pull-request@v4
         with:
           token: ${{ secrets.RELEASE_TOKEN }}
           delete-branch: true
-          commit-message: 'docs: swagger update'
-          title: Update Swagger
-          body: |
-            Updates [swagger-ui]
+          commit-message: 'docs: update ego gen api'
+          title: Update Ego Gen API
