fix: Fix the problem that editing an instance will cause the Prometheus to be deleted

--- a/egogen.yaml
+++ b/egogen.yaml
@@ -15,6 +15,14 @@ properties:
     - type: '*github.com/clickvisual/clickvisual/api/pkg/component/core.Context'
       method: 'JSONOK'
       return:
-        contentType: 'application/json'
-        data: 'args[0]'
-        status: 200
+        contentType: 'application/json'  # 指定响应的 content-type
+        data: # 这是一个嵌套的数据格式示例 '{"code":0,"msg":"hello",data:{...}}'
+          type: 'object'
+          properties:
+            code:
+              type: 'number'
+            msg:
+              type: 'string'
+            data:
+              type: 'args[0]' # 指定为第一个函数参数
+        status: 200 # 指定为 200 状态码
