--- a/.github/workflows/update-swagger.yml
+++ b/.github/workflows/update-swagger.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           export PATH=$(go env GOPATH)/bin:$PATH
           go version 
-          go install github.com/gotomicro/ego-gen-api/cmd/egogen@v0.0.1-rc1
+          go install github.com/gotomicro/ego-gen-api/cmd/egogen@v0.0.1-rc3
           egogen --config egogen.yaml
       - name: Install ossutil
         run: wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
@@ -32,5 +32,5 @@ jobs:
         with:
           token: ${{ secrets.RELEASE_TOKEN }}
           delete-branch: true
-          commit-message: 'docs: update ego gen api'
-          title: Update EGO Gen API
+          commit-message: 'docs: update swagger json'
+          title: update swagger json
