--- a/data/all-in-one/clickvisual/config/resource.yaml
+++ b/data/all-in-one/clickvisual/config/resource.yaml
@@ -16,43 +16,47 @@ permission:
     children:
       - name: rules
         path: /alarm/rules
+      - name: environment
+        path: /alarm/environment
       - name: notifications
         path: /alarm/notifications
   - name: configure
     path: /configure
+  - name: bigdata
+    path: /bigdata
   - name: systemSettings
     path: /sys
     children:
       - path: /sys/instances
         name: database
         api:
-          - name: 查询数据库连接
-            method: GET
-            path: /api/sys/instances
-          - name: 新增数据库连接
-            method: POST
-            path: /api/sys/instances
-          - name: 更新数据库连接
-            method: PATCH
-            path: /api/sys/instances/:id
-          - name: 删除数据库连接
-            method: DELETE
-            path: /api/sys/instances/:id
+        - name: 查询数据库连接
+          method: GET
+          path: /api/sys/instances
+        - name: 新增数据库连接
+          method: POST
+          path: /api/sys/instances
+        - name: 更新数据库连接
+          method: PATCH
+          path: /api/sys/instances/:id
+        - name: 删除数据库连接
+          method: DELETE
+          path: /api/sys/instances/:id
       - path: /sys/clusters
         name: cluster
         api:
-          - name: 查询数据库连接
-            method: GET
-            path: /api/v1/sys/clusters
-          - name: 新增数据库连接
-            method: POST
-            path: /api/v1/sys/clusters
-          - name: 更新数据库连接
-            method: PATCH
-            path: /api/v1/sys/clusters/:id
-          - name: 删除数据库连接
-            method: DELETE
-            path: /api/v1/sys/clusters/:id
+        - name: 查询数据库连接
+          method: GET
+          path: /api/v1/sys/clusters
+        - name: 新增数据库连接
+          method: POST
+          path: /api/v1/sys/clusters
+        - name: 更新数据库连接
+          method: PATCH
+          path: /api/v1/sys/clusters/:id
+        - name: 删除数据库连接
+          method: DELETE
+          path: /api/v1/sys/clusters/:id
       - name: events
         path: /sys/events
       - name: pms
@@ -94,3 +98,5 @@ permission:
           - path: /api/v1/pms/check
             name: 查询权限
             method: POST
+      - name: user
+        path: /sys/user
