--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Build docs
         run: cd docs && npm install && npm run docs:build
       - name: Install ossutil
-        run: wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
+        run: cd docs && wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
       - name: Config ossutil
-        run: ./ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ secrets.OSS_ACCESS_KEY_ID }} -k ${{ secrets.OSS_ACCESS_KEY_SECRET }}
+        run: cd docs && ./ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ secrets.OSS_ACCESS_KEY_ID }} -k ${{ secrets.OSS_ACCESS_KEY_SECRET }}
       - name: Upload docs
-        run: ./ossutil64 cp -r -f ./docs/.vuepress/dist/ oss://gocn-cdn/clickvisual/
+        run: cd docs && ./ossutil64 cp -r -f ./docs/.vuepress/dist/ oss://gocn-cdn/clickvisual/
