refactor: Optimize document and update docker-compose

--- a/data/all-in-one/clickvisual/config/docker.toml
+++ b/data/all-in-one/clickvisual/config/docker.toml
@@ -81,4 +81,4 @@ teamIds = []
 allowedOrganizations = []
 
 [defaultCh]
-dsn="tcp://clickhouse:9000?username=root&password=shimo&read_timeout=10&write_timeout=10&debug=true"
+dsn="clickhouse://root:shimo@clickhouse:9000/default?max_execution_time=60"
