--- a/ui/package.json
+++ b/ui/package.json
@@ -85,6 +85,7 @@
     "react-resizable": "^3.0.4",
     "sql-formatter": "^6.1.2",
     "styled-components": "^5.3.5",
+    "terser-webpack-plugin": "^5.3.7",
     "umi-serve": "^1.9.11",
     "xlsx": "^0.18.5",
     "yet-another-abortcontroller-polyfill": "^0.0.4"
