--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,10 +18,7 @@ jobs:
       - name: Install obsutil
         run: cd docs && wget https://obs-community.obs.cn-north-1.myhuaweicloud.com/obsutil/current/obsutil_linux_amd64.tar.gz && tar -xf obsutil_linux_amd64.tar.gz && chmod 755 obsutil
       - name: Upload docs by obsutil
-        run: cd docs && ./obsutil cp -r -f ./docs/.vuepress/dist/ obs://open-read/clickvisual/ -i ak -k sk -t token
-
-
-
+        run: cd docs && ./obsutil cp -r -f ./docs/.vuepress/dist/ obs://open-read/clickvisual/ -i ${{ secrets.OBS_ACCESS_KEY_ID }} -k ${{ secrets.OBS_ACCESS_KEY_SECRET }}
       - name: Install ossutil
         run: cd docs && wget http://gosspublic.alicdn.com/ossutil/1.7.3/ossutil64 && chmod 755 ossutil64
       - name: Config ossutil
