--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
       - name: Build docs
-        run: cd docs && npm install && npm run docs:build
+        run: cd docs && yarn install && yarn run docs:build
       - name: Install obsutil
         run: cd docs && wget https://obs-community.obs.cn-north-1.myhuaweicloud.com/obsutil/current/obsutil_linux_amd64.tar.gz && tar -xf obsutil_linux_amd64.tar.gz && chmod 755 obsutil
       - name: Upload docs by obsutil
