--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "git@github.com:clickvisual/clickvisual.git"
   },
+  "license": "MIT",
   "keywords": [],
   "author": "",
   "dependencies": {
