--- a/docs/package.json
+++ b/docs/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "clickvisual-website",
+  "name": "docs",
   "version": "1.0.0",
-  "description": "clickvisual website",
   "main": "index.js",
+  "license": "MIT",
+  "devDependencies": {
+    "vuepress": "^1.9.9"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:clickvisual/clickvisual.git"
-  },
-  "license": "MIT",
-  "keywords": [],
-  "author": "",
   "dependencies": {
-    "@vssue/api-github-v3": "^1.4.4",
-    "@vssue/vuepress-plugin-vssue": "^1.4.6",
-    "@vuepress/plugin-active-header-links": "^1.2.0",
-    "@vuepress/plugin-back-to-top": "^1.2.0",
-    "@vuepress/plugin-medium-zoom": "^1.2.0",
-    "@vuepress/plugin-nprogress": "^1.2.0",
-    "@vuepress/plugin-pwa": "^1.2.0",
-    "moment": "^2.29.4",
-    "vuepress": "^1.9.9"
+    "moment": "^2.29.4"
   }
 }
